Gemaakt met Colaboratory

--- a/Future_price.ipynb
+++ b/Future_price.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN1io5FrcVHFA1rF61lqcnP",
+      "authorship_tag": "ABX9TyMqTcSZB2E8Levks8i/uUTh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Evely90/Co2-Emissions/blob/main/Future_price.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Evely90/CO2-Emissions/blob/main/Future_price.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -65,12 +65,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 441
+          "height": 458
         },
         "id": "M98PykRnArcV",
-        "outputId": "0f61b7ea-902a-41e8-e2b4-58b7005bdc2e"
+        "outputId": "6e8246e1-bb49-4657-a4b3-697a8e52b18d"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -171,7 +171,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-336e1544-53d8-4f0a-a18a-3ef622423981\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-61243bdb-b92a-4af5-9d21-0e175a3f14b5\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -353,7 +353,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-336e1544-53d8-4f0a-a18a-3ef622423981')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-61243bdb-b92a-4af5-9d21-0e175a3f14b5')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -405,12 +405,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-336e1544-53d8-4f0a-a18a-3ef622423981 button.colab-df-convert');\n",
+              "        document.querySelector('#df-61243bdb-b92a-4af5-9d21-0e175a3f14b5 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-336e1544-53d8-4f0a-a18a-3ef622423981');\n",
+              "        const element = document.querySelector('#df-61243bdb-b92a-4af5-9d21-0e175a3f14b5');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -430,8 +430,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-c40c62e7-7ca5-41b6-865e-4d51cdef5434\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c40c62e7-7ca5-41b6-865e-4d51cdef5434')\"\n",
+              "<div id=\"df-f6e58672-28d3-4608-8242-7d27e1ce41a5\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f6e58672-28d3-4608-8242-7d27e1ce41a5')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -550,7 +550,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-c40c62e7-7ca5-41b6-865e-4d51cdef5434 button');\n",
+              "        document.querySelector('#df-f6e58672-28d3-4608-8242-7d27e1ce41a5 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -566,15 +566,27 @@
             }
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 1
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "# Creating a copy before continueing so the original dataframe stays unaltered.\n",
+        "df = df.copy()"
+      ],
+      "metadata": {
+        "id": "eMs-JVK_JBrT"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Filter the df to only use World costs, since there isn't many data for each country\n",
-        "df = df[df['Entity'] == 'World']\n",
+        "df = df.loc[df['Entity'] == 'World']\n",
         "\n",
         "# Drop unncessecary columns\n",
         "df = df.drop(columns=['Code', 'Entity'])\n",
@@ -592,9 +604,9 @@
           "height": 1000
         },
         "id": "QqFS14lMA_Re",
-        "outputId": "103ee6e0-430f-4728-e4fc-19d60906392a"
+        "outputId": "8a3b3933-ccc5-47cd-d76a-4a11e75d6a31"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -684,7 +696,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-5b49758f-d84f-4139-aa37-7439100db569\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-0efa3238-c7ba-4a2c-998e-4fda44123df7\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1149,7 +1161,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5b49758f-d84f-4139-aa37-7439100db569')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0efa3238-c7ba-4a2c-998e-4fda44123df7')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1201,12 +1213,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-5b49758f-d84f-4139-aa37-7439100db569 button.colab-df-convert');\n",
+              "        document.querySelector('#df-0efa3238-c7ba-4a2c-998e-4fda44123df7 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-5b49758f-d84f-4139-aa37-7439100db569');\n",
+              "        const element = document.querySelector('#df-0efa3238-c7ba-4a2c-998e-4fda44123df7');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1226,8 +1238,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-e3b7fc90-ad52-48a4-acda-737cd412e1c2\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e3b7fc90-ad52-48a4-acda-737cd412e1c2')\"\n",
+              "<div id=\"df-eea80a44-d0b0-4936-ac41-7c86c96dee9d\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-eea80a44-d0b0-4936-ac41-7c86c96dee9d')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1346,7 +1358,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-e3b7fc90-ad52-48a4-acda-737cd412e1c2 button');\n",
+              "        document.querySelector('#df-eea80a44-d0b0-4936-ac41-7c86c96dee9d button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1362,7 +1374,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 3
         }
       ]
     },
@@ -1409,9 +1421,9 @@
           "height": 607
         },
         "id": "NDvgGrdT87Br",
-        "outputId": "07b6b6e7-eeb3-4ac3-ea3b-93e04030d8f5"
+        "outputId": "b0945f2c-2ec6-4ab9-c6b3-d5c42597c925"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1473,9 +1485,9 @@
           "height": 607
         },
         "id": "ClqpdCeOEqNk",
-        "outputId": "d51db7bc-4f71-49f1-a202-a641bb33425c"
+        "outputId": "3aefbb3a-e41b-4a34-8a79-0227477ef553"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
