Gemaakt met Colaboratory

--- a/Future_price.ipynb
+++ b/Future_price.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM6dQWiGS2pqHtcKoCmtRsf",
+      "authorship_tag": "ABX9TyOsU7jGw9i46lYBmSguCMtu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,7 +59,7 @@
         "import seaborn as sns\n",
         "\n",
         "# Import dataframe of levelized energy costs\n",
-        "df = pd.read_csv('https://raw.githubusercontent.com/Evely90/Co2-Emissions/main/levelized-cost-of-energy.csv')\n",
+        "df = pd.read_csv('https://raw.githubusercontent.com/Evely90/Co2-Emissions/main/data/levelized-cost-of-energy.csv')\n",
         "df"
       ],
       "metadata": {
@@ -68,9 +68,9 @@
           "height": 458
         },
         "id": "M98PykRnArcV",
-        "outputId": "104ca523-fed6-493d-f28a-51bfc86374a0"
+        "outputId": "71abe64d-9a0f-483a-853c-0a078a69ec95"
       },
-      "execution_count": 36,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -171,7 +171,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-bd1d0fcf-a03f-4ec4-b7db-5a8d90927d61\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-e74067fb-0372-4c0a-ac20-7f3663ae31a8\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -353,7 +353,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bd1d0fcf-a03f-4ec4-b7db-5a8d90927d61')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e74067fb-0372-4c0a-ac20-7f3663ae31a8')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -405,12 +405,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-bd1d0fcf-a03f-4ec4-b7db-5a8d90927d61 button.colab-df-convert');\n",
+              "        document.querySelector('#df-e74067fb-0372-4c0a-ac20-7f3663ae31a8 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-bd1d0fcf-a03f-4ec4-b7db-5a8d90927d61');\n",
+              "        const element = document.querySelector('#df-e74067fb-0372-4c0a-ac20-7f3663ae31a8');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -430,8 +430,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-1d2c013f-da7f-482d-ab8a-0b52246c613e\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-1d2c013f-da7f-482d-ab8a-0b52246c613e')\"\n",
+              "<div id=\"df-af576a0b-d09e-4598-8d2d-a7f949d25173\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-af576a0b-d09e-4598-8d2d-a7f949d25173')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -550,7 +550,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-1d2c013f-da7f-482d-ab8a-0b52246c613e button');\n",
+              "        document.querySelector('#df-af576a0b-d09e-4598-8d2d-a7f949d25173 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -566,7 +566,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 41
         }
       ]
     },
@@ -579,7 +579,7 @@
       "metadata": {
         "id": "eMs-JVK_JBrT"
       },
-      "execution_count": 37,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -604,9 +604,9 @@
           "height": 1000
         },
         "id": "QqFS14lMA_Re",
-        "outputId": "781e971f-63fe-4ae5-e31d-55d861657cbd"
+        "outputId": "e44fa066-58a6-4bc7-ded1-7676df4bf136"
       },
-      "execution_count": 38,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -696,7 +696,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-60fa5035-9385-4c31-b084-fe48082d5457\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-419a3720-49bf-460e-80aa-01bb74ed1797\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1161,7 +1161,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-60fa5035-9385-4c31-b084-fe48082d5457')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-419a3720-49bf-460e-80aa-01bb74ed1797')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1213,12 +1213,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-60fa5035-9385-4c31-b084-fe48082d5457 button.colab-df-convert');\n",
+              "        document.querySelector('#df-419a3720-49bf-460e-80aa-01bb74ed1797 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-60fa5035-9385-4c31-b084-fe48082d5457');\n",
+              "        const element = document.querySelector('#df-419a3720-49bf-460e-80aa-01bb74ed1797');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1238,8 +1238,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-fb744829-2522-4240-ba79-5b7d504c62fc\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-fb744829-2522-4240-ba79-5b7d504c62fc')\"\n",
+              "<div id=\"df-bd7c4623-0a91-40c8-937d-98d2576fbbd3\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-bd7c4623-0a91-40c8-937d-98d2576fbbd3')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1358,7 +1358,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-fb744829-2522-4240-ba79-5b7d504c62fc button');\n",
+              "        document.querySelector('#df-bd7c4623-0a91-40c8-937d-98d2576fbbd3 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1374,13 +1374,14 @@
             }
           },
           "metadata": {},
-          "execution_count": 38
+          "execution_count": 43
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "# Make graph with linear regression of current levelized costs\n",
         "fig, ax = plt.subplots(figsize=(12, 6))\n",
         "\n",
         "# Set colors of points and regression line\n",
@@ -1421,9 +1422,9 @@
           "height": 607
         },
         "id": "NDvgGrdT87Br",
-        "outputId": "5a984cc2-d933-4e88-e1fe-c83d288a5558"
+        "outputId": "5f18ebdc-8045-43ab-9758-c959a276295e"
       },
-      "execution_count": 39,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1440,6 +1441,8 @@
     {
       "cell_type": "code",
       "source": [
+        "# Make a graph with future levelized costs\n",
+        "\n",
         "fig, ax = plt.subplots(figsize=(12, 6))\n",
         "\n",
         "# Set colors of points and regression line\n",
@@ -1470,7 +1473,7 @@
         "    # Create scatterplot for each energy technology\n",
         "    plt.scatter(years, energy_price, alpha=1, zorder=2, color=point_colors[j])\n",
         "\n",
-        "# Add labels, title, and legend\n",
+        "# Add labels, title, and legend, grid\n",
         "plt.xlabel('Year', fontsize=14)\n",
         "plt.ylabel('Cost (US dollars per KWh)', fontsize=14)\n",
         "plt.title('Prices of different non-fossil energy technologies over the years', fontsize=20)\n",
@@ -1486,9 +1489,9 @@
           "height": 607
         },
         "id": "ClqpdCeOEqNk",
-        "outputId": "957ab20d-3f45-462c-faff-c31e0602a666"
+        "outputId": "51837c79-780c-4825-f87c-4f6bc9a1ab51"
       },
-      "execution_count": 40,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "display_data",
